Cleanups in symlink40.
(Logical change 1.2848)

--- a/TODO
+++ b/TODO
@@ -39,4 +39,4 @@ reiser4progs/COPYING.
 
 * copy methods in node API.
 
-* symlink support in reiser4_file_realize function.
+* debug symlinks opening/creating.
