--- a/TODO
+++ b/TODO
@@ -38,4 +38,7 @@ reiser4progs/COPYING.
 * conform reiser4 and reiser4progs to be worked with LILO and GRUB.
 
 * copy methods in node API.
-* writing symlink may require expanding the node.
+
+* writing symlink may require expanding the node. Or we should do 
+  not allow write symlinks? Write method may just remove old stat
+  data and insert new one.
