--- a/TODO
+++ b/TODO
@@ -56,3 +56,4 @@ reiser4progs/COPYING.
 
 * replace item's method "remove" by "shrink".
 * for why we have cut/remove and paste/insert in node plugin interface?
+* TRUE and FALSE macros in aal.h
