--- a/TODO
+++ b/TODO
@@ -30,9 +30,6 @@ reiser4progs/COPYING.
   on other hands, insert of an item (nor extent or nodeptr) may 
   require to perform so called drilling on the twig level.
 
-* improve work with keys in API and plugins. The problem is that we 
-  always need the key plugin. Where should we take it everytime?
-
 * return value from the all low level plugin functions should be raised 
   up to the libreiser4 level.
 
@@ -45,7 +42,7 @@ reiser4progs/COPYING.
 
 * conform reiser4 and reiser4progs to be worked with LILO and GRUB.
 
-* copy methods in node API.
+* copy methods in node API. Almost finished.
 
 * writing symlink may require expanding the node. Or we should do 
   not allow write symlinks? Write method may just remove old stat
