--- a/TODO
+++ b/TODO
@@ -54,4 +54,7 @@ reiser4progs/COPYING.
 * remove and insert in node plugin probably should take an additional
   param, and namely the count of items/unit to be inserted/removed.
 
-* node plugin insert probably should be renamed into write
+* node plugin insert probably should be renamed into write.
+
+* should "read" method of the item plugin require reiser4_item_hint_t
+  instead of pointer to the unit hint array?
