--- a/doc/mkfs.reiser4.8
+++ b/doc/mkfs.reiser4.8
@@ -58,6 +58,13 @@ prints known profiles.
 .TP
 .B -P, --known-plugins
 prints known plugins.
+.TP
+.B -o, --override TYPE=PLUGIN, ...
+overrides the default plugin of the type "TYPE" by the plugin "PLUGIN"
+.sp 1
+Examples:
+.sp 1
+mkfs.reiser4 -qf -o nodeptr=nodeptr41,hash=rupasov_hash /dev/hda2
 .RS
 .SH REPORTING BUGS
 Report bugs to <umka@namesys.com>, <reiserfs-list@namesys.com>
