--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -67,7 +67,7 @@ prints the journal with not commited transaction (if any).
 .B -b, --print-block-alloc
 prints the block allocator data.
 .TP
-.B -o, --print-oid-alloc
+.B -d, --print-oid-alloc
 prints the oid allocator data.
 .SH MEASUREMENT OPTIONS
 .TP
@@ -111,6 +111,16 @@ profile to be used.
 .TP
 .B -K, --known-profiles
 prints known profiles.
+.TP
+.B -P, --known-plugins
+prints known plugins.
+.TP
+.B -o, --override TYPE=PLUGIN, ...
+overrides the default plugin of the type "TYPE" by the plugin "PLUGIN"
+.sp 1
+Examples:
+.sp 1
+debugfs.reiser4 -o nodeptr=nodeptr41,hash=rupasov_hash /dev/hda2
 .RS
 .SH REPORTING BUGS
 Report bugs to <umka@namesys.com>, <reiserfs-list@namesys.com>
