--- a/TODO
+++ b/TODO
@@ -3,12 +3,7 @@ This file is part of reiser4progs package
 Copyright (C) 2001, 2002 by Hans Reiser, licensing governed by
 reiser4progs/COPYING.
 
-* implement files removing.
-
-* should we consider, that node's children list may contains empty 
-  nodes? Or in node_remove we should detach empty node from the list?
-
-* debug tree remove stuff.
+* implement files removing and debug direntry40_remove stuff.
 
 * implement reiser4_tree_write function.
 
@@ -42,10 +37,6 @@ reiser4progs/COPYING.
 * return value from the all low level plugin functions should be raised 
   up to the libreiser4 level.
 
-* FIBMAP ioctl implementation in reiser4.
-
-* conform reiser4 and reiser4progs to be worked with LILO and GRUB.
-
 * writing symlink may require expanding the node. Or we should do 
   not allow write symlinks? Write method may just remove old stat
   data and insert new one.
@@ -57,3 +48,8 @@ reiser4progs/COPYING.
 
 * should we move out all bitmap's and alloc's functions which do not work 
   with regions and rename the rest in more simple maner (without region)?
+
+* FIBMAP ioctl implementation in reiser4.
+
+* conform reiser4 and reiser4progs to be worked with LILO and GRUB.
+
