--- a/TODO
+++ b/TODO
@@ -5,6 +5,12 @@ reiser4progs/COPYING.
 
 * implement reiser4_tree_write function needed for fsck.
 
+* solve the problem with that item plugins cannot rely on item.len 
+  due to its changing by the node plugin before calling item plugin.
+
+* cutout all unused code from the the alone build (block alloc, oid 
+  alloc, etc).
+
 * insert an extent among internal items may require perform shift and
   on other hands, insert of an item (nor extent or nodeptr) may 
   require to perform so called drilling on the twig level.
