--- a/TODO
+++ b/TODO
@@ -3,12 +3,11 @@ This file is part of reiser4progs package
 Copyright (C) 2001, 2002, 2003 by Hans Reiser, licensing governed by
 reiser4progs/COPYING.
 
-* implement sdext_entity_t.
-
-* fix bug in callback_open_ext() function with getting full 64bit 
-  mask.
+* fix setting up entry stat data keys in direntry40 plugin.
 
 * eliminate stat40_belongs method.
+
+* should we use sdext_entity_t in sdext plugin interface?
 
 * implement reiser4_tree_write function needed for fsck.
 
