Cleanups, types renamings, got out the difference between kernel and library in lookup of extents. By now extent40 lookup sets up unit pos not in bytes, but rather in extent units.
(Logical change 1.3047)

--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -39,11 +39,8 @@ forces using the filesystem without any questions
 makes debugfs to use whole disk, not block device or mounted partition.
 .SH BROWSING OPTIONS
 .TP
-.B -l, --ls
-browses passed file like standard ls program.
-.TP
 .B -c, --cat
-browses passed file like standard cat program.
+browses passed file like standard cat and ls programs.
 .SH PRINT OPTIONS
 .TP
 .B -t, --print-tree
