--- a/TODO
+++ b/TODO
@@ -3,21 +3,16 @@ This file is part of reiser4progs package
 Copyright (C) 2001, 2002, 2003 by Hans Reiser, licensing governed by
 reiser4progs/COPYING.
 
-* eliminate stat40_belongs method.
-
 * should we use sdext_entity_t in sdext plugin interface?
 
 * implement reiser4_tree_write function needed for fsck.
 
 * solve the problem with that, the item plugins cannot rely on item.len 
-  due to its changing by the node plugin before calling item plugin.
+  due to it is changing by the node plugin before calling item plugin.
 
 * insert an extent among internal items may require perform shift and
   on other hands, insert of an item (nor extent or nodeptr) may 
   require to perform so called drilling on the twig level.
-
-* add limits to balancing code (limit on moved items, units and 
-  bytes)
 
 * --print-journal option handling code in debugfs.
 
@@ -37,10 +32,13 @@ reiser4progs/COPYING.
   with object it points to.
 
 * writing symlink may require expanding the node. Or we should do 
-  not allow write symlinks? Write method may just remove old stat
-  data and insert new one.
+  not allow write symlinks at all? Write method may just remove old 
+  stat data and insert new one.
 
-* repacking is needed after tree is created by libreiser4.
+* some kind og flush is needed for libreiser4.
+
+* change balancing algorithm from the recursive to task oriented like 
+  kernel does.
 
 * should we move out all bitmap's and alloc's functions which do not work 
   with regions and rename the rest in more simple maner (without region)?
