--- a/TODO
+++ b/TODO
@@ -3,6 +3,9 @@ This file is part of reiser4progs package
 Copyright (C) 2001, 2002, 2003 by Hans Reiser, licensing governed by
 reiser4progs/COPYING.
 
+* add option to debugfs, which will turn off directories from the data
+  fragmentation calculating.
+
 * insert an extent among internal items may require perform shift and
   on other hands, insert of an item (nor extent or nodeptr) may 
   require to perform so called drilling on the twig level.
