--- a/TODO
+++ b/TODO
@@ -3,6 +3,9 @@ This file is part of reiser4progs package
 Copyright (C) 2001, 2002, 2003 by Hans Reiser, licensing governed by
 reiser4progs/COPYING.
 
+* change reiser4_node_pos() function in order to make it working with
+  node block numbers, not with keys.
+
 * add option to debugfs, which will turn off directories from the data
   fragmentation calculating.
 
