Fixes in manual pages.
(Logical change 1.3149)

--- a/doc/debugfs.reiser4.8
+++ b/doc/debugfs.reiser4.8
@@ -19,7 +19,7 @@
 debugfs.reiser4 \- the program for debugging the reiser4 filesystem.
 .SH SYNOPSIS
 .B debugfs.reiser4
-debugfs.reiser4 [ options ] FILE
+[ options ] FILE
 .SH DESCRIPTION
 .B debugfs.reiser4
 is reiser4 filesystem debug program. You can disscover the internal reiser4 filesystem 
