--- a/doc/measurefs.reiser4.8
+++ b/doc/measurefs.reiser4.8
@@ -20,7 +20,7 @@ measurefs.reiser4 \- the program for measuring reiser4 filesystem
 parameters (fragmentation, node packing, etc.).
 .SH SYNOPSIS
 .B measurefs.reiser4
-measurefs.reiser4 [ options ] FILE
+[ options ] FILE
 .SH DESCRIPTION
 .B measurefs.reiser4
 is reiser4 filesystem measure program. You can estimate reiser4
