--- a/doc/mkfs.reiser4.8
+++ b/doc/mkfs.reiser4.8
@@ -19,7 +19,7 @@
 mkfs.reiser4 \- the program for creating reiser4 filesystem.
 .SH SYNOPSIS
 .B mkfs.reiser4
-mkfs.reiser4 [ options ] FILE1 FILE2 ... [ size[K|M|G] ]
+[ options ] FILE1 FILE2 ... [ size[K|M|G] ]
 .SH DESCRIPTION
 .B mkfs.reiser4
 is reiser4 filesystem creation program. It is based on new libreiser4 library. Since libreiser4 fully plugin-based, we have potential possibility to create not just reiser4, but any filesystem or database format, which based on the balanced tree.
