--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,3 @@
 In not important order:
 
-* Andrew Clausen <clausen@gnu.org> for cool exception idea.
+* Whole namesys team for advices and testing.
